--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,8 +17,18 @@
     background-color: #050505;
 }
 
+.bg-gray-800 {
+    background-color: #2f2f2f;
+}
+
 .texto-primario {
     color: #ceb98c !important;
+    transition: 0.3s ease all;
+}
+
+.texto-primario:hover {
+    color: #eed6a3 !important;
+    transition: 0.3s ease all;
 }
 
 .borda-primaria {
@@ -34,6 +44,19 @@
     margin-top: 74px;
 }
 
+.bg-branco {
+    background-color: #cccccc;
+}
+
+.btn-dark {
+    background-color: #2f2f2f !important;
+    border: 0 !important;
+}
+
+.btn-dark:hover {
+    background-color: #3d3d3d !important;
+}
+
 @media only screen and (max-width: 992px) {
     .bg-intro {
         margin-top: 58px;
@@ -46,6 +69,18 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+}
+
+.btn-primary {
+    background-color: #ceb98c !important;
+    border: 1px solid #ceb98c !important;
+    color: #2f2f2f !important;
+    font-weight: bold !important;
+}
+
+.btn-primary:hover {
+    background-color: #eed6a3 !important;
+    border: 1px solid #eed6a3 !important;
 }
 
 /* CONTENT */
@@ -69,5 +104,86 @@
 
 .nav-detalhe:hover::after {
     width: 60%;
+    transition: 0.3s all ease;
+}
+
+.titulo-detalhe {
+    position: relative;
+}
+
+.titulo-detalhe::after {
+    content: "";
+    background-color: #ceb98c;
+    width: 100%;
+    height: 3px;
+    bottom: -5px;
+    left: 0;
+    position: absolute;
+}
+
+.btn-detalhe {
+    position: relative;
+}
+
+.btn-detalhe::after {
+    content: url("/img/btn-detalhe.svg");
+    position: absolute;
+    bottom: -42px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.footer-detalhe {
+    position: relative;
+}
+
+.footer-detalhe::before {
+    content: "";
+    position: absolute;
+    left: -25px;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 120%;
+    width: 2px;
+    background-color: #ceb98c;
+}
+
+.info-detalhe {
+    position: relative;
+}
+
+.info-detalhe::after {
+    content: "";
+    background-color: #3c3c3c;
+    border-radius: 50px;
+    height: 2px;
+    width: 100%;
+    position: absolute;
+    bottom: -8px;
+    left: 0;
+}
+
+.horario-detalhe {
+    position: relative;
+}
+
+.horario-detalhe::before {
+    content: "";
+    border-radius: 50px;
+    width: 8px;
+    height: 8px;
+    border: 2px solid #04e135;
+    position: absolute;
+    left: -15px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.img-hover {
+    transition: 0.3s all ease;
+}
+
+.img-hover:hover {
+    transform: scale(1.1);
     transition: 0.3s all ease;
 }
